# lichess-club-elo

./: .gitignore  Cargo.toml  LICENSE
src/: config.rs  game.rs  lichess.rs  main.rs
