[package]
name = "club-elo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.81"
reqwest = { version = "0.11.11", features = ["blocking"] }