[package]
edition = "2021"
name = "club-elo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elo = "0.2.1"
reqwest = {version = "0.11.11", features = ["blocking"]}
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.81"
toml = "0.5.2"
